Fix layout of Photo Details on Mobile; Fix Drawable rendering

--- a/gallery-fe/src/components/NewComment/NewComment.module.scss
+++ b/gallery-fe/src/components/NewComment/NewComment.module.scss
@@ -12,6 +12,8 @@
     margin-top: -48px;
 
     cursor: pointer;
+
+    display: inline-block;
   }
 
   &__hint {
