--- a/gallery-fe/src/components/PhotoGrid/PhotoGrid.module.scss
+++ b/gallery-fe/src/components/PhotoGrid/PhotoGrid.module.scss
@@ -44,6 +44,8 @@
 
     width: 100%;
 
+    box-sizing: border-box;
+
     background-color: rgba(0, 0, 0, 0.75);
 
     color: white;
