--- a/gallery-fe/src/components/Rating/Rating.module.scss
+++ b/gallery-fe/src/components/Rating/Rating.module.scss
@@ -8,6 +8,8 @@
 
   cursor: pointer;
 
+  display: flex;
+
   .rating_circle {
     display: inline-block;
     top: 0;
