--- a/gallery-fe/src/pages/Photo/Photo.module.scss
+++ b/gallery-fe/src/pages/Photo/Photo.module.scss
@@ -56,4 +56,21 @@
     width: 100%;
     height: 165px;
   }
+
+  .ratings {
+    display: flex;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .photo_info {
+    .details {
+      flex-direction: column-reverse;
+    }
+
+    .date {
+      margin-left: 0;
+      margin-bottom: 16px;
+    }
+  }
 }
